# example-serverless

./: BUILD  README.md  pants.toml  pyproject.toml  requirements.txt
aws/: conftest.py
aws/example_rest_api/: README.md
aws/example_rest_api/api/: BUILD  get_item.py  manage_items.py
aws/example_rest_api/models/: item.py
aws/tests/: test_get_item.py  test_manage_items.py
awslambda_example/update_user/: update_user.py
